added many2many associations betweenn compnies annd materials

--- a/app/views/materials/_form.haml
+++ b/app/views/materials/_form.haml
@@ -6,7 +6,7 @@
           %h2
             = "#{pluralize(@material.errors.count, "error")} prohibited this material from being saved:"
           %ul
-            - @material.erros.full_messages.each do |msg|
+            - @material.errors.full_messages.each do |msg|
               %li
                 = msg
       .row
