--- a/app/views/materials/index.haml
+++ b/app/views/materials/index.haml
@@ -8,7 +8,7 @@
       = form_for search_path, method: :get do |f|
         %p
           = f.label "Search for"
-          = text_field_tag :query, params[:query], class: 'form-control typeahead', id: "material_search"
+          = text_field_tag :query, params[:query], class: 'input form-control', id: "material_search"
           = submit_tag "Go", name: nil
       %hr
 .container
