--- a/app/views/materials/index.haml
+++ b/app/views/materials/index.haml
@@ -5,7 +5,7 @@
       %hr
       %h2 Search for your materials here!
       .input-group.col-md-12
-      = form_for search_path, method: :get do |f|
+      = form_for materials_path, method: :get do |f|
         %p
           = f.label "Search for"
           = text_field_tag :query, params[:query], class: 'input form-control', id: "material_search"
