--- a/app/views/partials/_nav.haml
+++ b/app/views/partials/_nav.haml
@@ -11,4 +11,4 @@
       %ul.nav.navbar-nav
         %li= link_to 'New Material', new_material_path
         %li= link_to 'New Company', new_company_path
-        %li{:class => "#{"active" if current_page?(materials_path)}"}= link_to 'Elastic Search', materials_path
+        %li{:class => "#{"active" if current_page?(materials_path)}"}= link_to 'Search', materials_path
