--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,5 +7,6 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    = render 'partials/nav'
+    -if !current_page?(root_path)
+      = render 'partials/nav'
     = yield
